--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 	 
 <title>Home-Shopme Admin</title>
-<link rel="stylesheet" type="text/css" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 <link rel='stylesheet' type='text/css' th:href='@{/fontawesome/all.css}' />
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -70,6 +70,21 @@
 		<div th:if="${message != null}" class="alert alert-success text-center">
 			[[${message}]]
 		</div>
+		
+		<div>
+			<form th:action="@{/users/page/1}" class="form-inline m-3" >
+			<input type="text" name="sortField" th:value=${sortField}/>
+			<input type="text" name="sortDir" th:value=${sortDir}/>
+			
+			Filter:&nbsp;
+			<input type="search" name="keyword" th:value=${keyword}  required/>
+			&nbsp;&nbsp;
+			<input type="submit" value="Search" class="btn btn-primary"/>
+			&nbsp;&nbsp;
+			<input type="submit" value="clear" class="btn btn-secondary" onclick="clearfunction()"/>
+			</form>
+		</div>
+		
 		<div>
 			<table class="table table-bordered table-striped table-hover table-responsive-xl">
 				<thead class="thead-dark">
@@ -77,7 +92,17 @@
 						<th>User Id</th>
 						<th>Photos</th>
 						<th>Email</th>
-						<th>First Name</th>
+						<th>
+						<a th:if="${sortField !='firstName'}" class="text-black"
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${sortDir}}">First Name
+						</a>
+						
+						<a th:if="${sortField =='firstName'}" class="text-black"
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">First Name
+						</a>
+						<span th:if="${sortField=='firstName'}"
+						      th:class="${sortDir=='asc' ? 'fas fa-sort-up' :'fas fa-sort-down'}"></span>
+						</th>
 						<th>Last Name</th>
 						<th>Roles</th>
 						<th>Enabled</th>
@@ -107,9 +132,45 @@
 				</tbody>
 			</table>
 		</div>
+		
+		<div class="text-center m-1" th:if="${totalItems>0}">
+			<span>Showing users # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+		</div>
+		
+		<div class="text-center m-1" th:unless="${totalItems>0}">
+			<span>No records found</span>
+		</div>
+		
+		<nav>
+		  <ul class="pagination justify-content-center">
+		  
+		  	<li th:class="${currentPage >1 ? 'page-item' : 'page-item disabled'}">
+		    	<a class="page-link" th:href="@{/users/page/1}">First</a>
+		    </li>
+		    
+		    <li th:class="${currentPage >1 ? 'page-item' : 'page-item disabled'}">
+		    	<a class="page-link" th:href="@{'/users/page/' + ${currentPage-1}}">Previous</a>
+		    </li>
+		    <li class="page-item" th:each="i : ${#numbers.sequence(1,totalPages)}">
+		    	<a class="page-link" th:href="@{'/users/page/' +${i}}">[[${i}]]</a>
+		    </li>
+		    <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+		    	<a class="page-link" th:href="@{'/users/page/' + ${currentPage+1}}">Next</a>
+		    </li>
+		    <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${totalPages}}">Last</a></li>
+		  </ul>
+		</nav>
+		
 		<div class="text-center">
 			<p> Shopme Control Panel-Copyright &copy;Shopme</p>
 		</div>
 	</div>
+	
+	<script type="text/javascript" >
+		function clearfunction(){
+			window.location="[[@{/users}]]";
+		}
+	</script>
+	
 </body>
 </html>
